Giropops-senhas/giropops-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops-senhas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: giropops-senhas
  template:    
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
      - name: giropops-senhas
        image: ferpdias/linuxtips-giropops-senhas:1.0
        ports:
        - containerPort: 5000
          name: giropops-senhas
        resources:
          limits: 
            # Limitar bastante o uso de CPU e memória para a criação de Pods pelo HPA
            cpu: "0.02"
            memory: 32Mi
