Giropops-senhas/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:    
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
          name: redis
        resources:
          limits: 
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 128Mi
